2003-11-21  Andrew Lunn  <andrew.lunn@ascom.ch>

	* tests/crc_test.c: Made the test text gcc 3.3.2 friendly. It does
	not like strings to continue over multiple lines when there are
	open " marks.

2003-02-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/crc.cdl: Add doc link.

2003-02-20  Bart Veer  <bartv@ecoscentric.com>

	* cdl/crc.cdl: specify test binaries, not test sources

2002-10-28  Andrew Lunn  <andrew.lunn@ascom.ch>

	* */*: Fixed 32-bit reliance.

2002-10-18  Jonathan Larmour  <jifl@eCosCentric.com>

	* include/crc.h: Add extern definitions.

2002-10-11  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/crc32.c (cyg_ether_crc32):
	* src/crc32.c (cyg_ether_crc32_accumulate): New functions for Ethernet
	  FCS style CRC calculations.
	* src/crc32.c (cyg_crc32_accumulate): New function. Continue
	  an previous CRC calculation into a new buffer.
	* tests/crc_test.c: Tests for new functions.

2002-08-07  Andrew Lunn  <andrew.lunn@ascom.ch>

	* Created a new package from the CRC routines
	  embedded in RedBoot.

//===========================================================================
//####ECOSGPLCOPYRIGHTBEGIN####
// -------------------------------------------
// This file is part of eCos, the Embedded Configurable Operating System.
// Copyright (C) 2002 Andrew Lunn
//
// eCos is free software; you can redistribute it and/or modify it under
// the terms of the GNU General Public License as published by the Free
// Software Foundation; either version 2 or (at your option) any later version.
//
// eCos is distributed in the hope that it will be useful, but WITHOUT ANY
// WARRANTY; without even the implied warranty of MERCHANTABILITY or
// FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
// for more details.
//
// You should have received a copy of the GNU General Public License along
// with eCos; if not, write to the Free Software Foundation, Inc.,
// 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA.
//